[MARCUS] - remove header Location devido a bug com swagger - indevido redirect
